working on making images transparent

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,22 @@ node_modules/
 .env
 clothing/
 acero/
+footwear/
+transparent/
+# Ignore all .DS_Store files
+.DS_Store
+# Ignore all .vscode directories
+.vscode/
+# Ignore all .idea directories
+.idea/
+# Ignore all .git directories
+.git/
+# Ignore all .cache directories
+.cache/
+# Ignore all .tmp files
+*.tmp
+
+.venv
+.venv/
+# Ignore all .pyc files
+*.pyc
