--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@supabase/supabase-js": "^2.51.0",
     "axios": "^1.7.2",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
