--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ acero/
 acero
 footwear/
 transparent/
+corteiz/
 # Ignore all .DS_Store files
 .DS_Store
 # Ignore all .vscode directories
@@ -28,3 +29,4 @@ transparent/
 .venv/
 # Ignore all .pyc files
 *.pyc
+corteiz.json
