--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
-    "@supabase/supabase-js": "^2.51.0",
+    "@supabase/supabase-js": "^2.54.0",
     "axios": "^1.7.2",
     "csv-parser": "^3.0.0",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.6.1",
+    "mime-types": "^3.0.1",
     "openai": "^4.52.2",
+    "p-limit": "^6.2.0",
     "puppeteer": "^22.11.2",
     "sharp": "^0.34.3"
   },
